# crunchy-bytes

./: CMakeLists.txt  LICENSE  OneBool.hpp  README.md  cereal_pack.hpp  cereal_pack.py  crunchy_bytes.py  parser.py
docs/: GLOBALS.md  ROUTER.md  SCHEMAS.md
generator/: __init__.py  errors.py  generate.py  globals.py  parser.py  property_types.py  schema.py  template.hpp  templates.py  validation.py
includes/cereal_pack/: cereal_pack.hpp
includes/cereal_pack/router/: Router.hpp
includes/cereal_pack/serialization/: Schema.hpp
includes/cereal_pack/serialization/properties/: ConstLengthBuffer.hpp  DynamicLengthBuffer.hpp  Primitive.hpp  Property.hpp  Reference.hpp  Set.hpp  String.hpp
includes/crunchy_bytes/: crunchy_bytes.hpp
includes/crunchy_bytes/router/: Router.hpp
includes/crunchy_bytes/serialization/: CrunchyBytesException.hpp  Schema.hpp
includes/crunchy_bytes/serialization/properties/: ConstLengthBuffer.hpp  DynamicLengthBuffer.hpp  Primitive.hpp  Property.hpp  Reference.hpp  Set.hpp  String.hpp
serialization/: CerealPackException.hpp  DynamicLengthBuffer.hpp  Primitive.hpp  Property.hpp  Schema.hpp  Set.hpp  String.hpp
serialization/properties/: ConstLengthBuffer.hpp  DynamicLengthBuffer.hpp  Primitive.hpp  Property.hpp  Reference.hpp  Set.hpp  String.hpp
test/: CMakeLists.txt  test_globals.toml
test-schemas/: nesting.toml  simple.toml
test/router/: BasicRouterTest.cpp  CMakeLists.txt  EnumRouterTest.cpp  RouterTest.cpp
test/router/test-schemas/: enum_header.toml  header.toml  name_header.toml  type_one.toml  type_three.toml  type_two.toml
test/serialization/: CMakeLists.txt  ConstantsTest.cpp  EqualityTest.cpp  ExceptionTest.cpp  SerializationTest.cpp  SettingAndGettingTest.cpp
test/serialization/test-schemas/: nesting.toml  one_bool.toml  simple.toml  using_globals.toml
test/src/: BasicTest.cpp  ConstantsTest.cpp  EqualityTest.cpp  ExceptionTest.cpp  SerializationTest.cpp  SettingAndGettingTest.cpp
test/test-schemas/: enums.toml  one_bool.toml  simple.toml  using_globals.toml
